--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4",
-	"react": "^16.14.0",
+    "react": "^16.14.0",
     "react-dom": "^16.14.0"
   },
   "scripts": {
@@ -40,6 +40,7 @@
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "enzyme-to-json": "^3.6.1"
+    "enzyme-to-json": "^3.6.1",
+    "jsdom": "^16.4.0"
   }
 }
