--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
-    "jsdom": "^16.4.0"
+    "jsdom": "^16.4.0",
+    "react-test-renderer": "^17.0.1"
   }
 }
