--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
     "jsdom": "^16.4.0",
-    "react-test-renderer": "^17.0.1"
+    "react-test-renderer": "^17.0.1",
+    "regenerator-runtime": "^0.13.7"
   }
 }
