--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "loadash": "^1.0.0",
     "node-fetch": "^2.6.1",
     "react": "^16.14.0",
@@ -39,6 +38,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.29.0",
+    "@testing-library/user-event": "^12.6.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
